Fixed Dark mode to apply itself throughout the website

--- a/css/styles-dark.css
+++ b/css/styles-dark.css
@@ -264,6 +264,8 @@ nav #discord img {
 
 .project h1 {
   margin: 0;
+  padding-top: 2rem; 
+  /* 16px */
   padding-bottom: 1.25rem;
   /* 20px */
 }
